:pencil2: Fix footer to wide on mobile
The `width: 300%;` was being applied to the footer, not the image.

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -365,7 +365,7 @@ footer {
 }
 
 @media (max-width: 480px) {
-  footer {
+  footer img {
     width: 300%;
     margin: 0 -100% -1px;
   }
